--- a/css/component/_content.scss
+++ b/css/component/_content.scss
@@ -2,53 +2,59 @@
 
 .content {
    &__theme {
-      font-size: 40px;
+      font-size: 32px;
       font-weight: 500;
       line-height: 1;
-      color: #3c3c3c;
-      margin-bottom: 30px;
-      width: 100%;
+      color: #005699;
+      margin: 30px 0;
       display: flex;
       align-items: flex-end;
       justify-content: flex-start;
-      background: url(../img/dots.png) no-repeat 95% center;
-      background-size: auto;
+
 
       &-img {
+         width: 90px;
          margin-right: 10px;
       }
    }
 
    &__title {
-      font-size: 44px;
+      font-size: 32px;
       font-weight: 500;
       line-height: 1.2;
-      color: #00628e;      
+      color: #0081bc;    
+      margin-bottom: 15px;  
    }
 
 
    &__subtitle {
-      font-size: 48px;
+      font-size: 24px;
       font-weight: 600;
       line-height: 1.2;
-      color: #00628e;
+      color: #0081bc;
       margin-bottom: 30px;
       &-info {
-         color: #02a1b4;
-         clear: auto;
-         font-size: 30px;
-         font-weight: 500;
-         padding-left: 36px;
-         margin: 15px 0;
-         background: url(../img/bullet_info.png) no-repeat 0 center;
-         background-size: auto;
-      }
-      &-area {
-         color: #3c3c3c;
+         color: #0081bc;
          clear: auto;
          font-size: 24px;
+         font-weight: 500;
+         padding-left: 52px;
+         margin: 15px 0;
+         background: url(../img/bullet_info_indi.svg) no-repeat 0 0;
+         background-size: 42px;
+      }
+      &-area {
+         color: #0081bc;
+         clear: auto;
+         font-size: 20px;
          font-weight: 500;         
-         margin: 30px 0 10px 0;         
+         margin: 30px 0 10px 0;   
+         display: flex;
+         align-items: center;
+         img{
+            width: 30px;
+            margin-right: 10px;
+         }      
       }
    }
 
@@ -56,7 +62,7 @@
       font-size: 16px;
       line-height: 1;
       margin: 15px 0;
-      color: #02a1b4;
+      color: #40beb0;
    }
 
    &__text {
@@ -69,11 +75,13 @@
       margin-bottom: 30px;
 
       a {
-         color: #02a1b4;
+         color: #0081bc;
       }
 
       ul,ol{
          margin-bottom: 30px;
+         margin-left: 60px;
+         padding: 0;
       }
    }
 
@@ -96,22 +104,22 @@
          width: 100%;
          margin: 15px 0;
          font-size: 18px;
-         padding: 3px 3px 3px 36px;
-         border: 2px solid #02a1b4;
-         border-radius: 3px;
-         color: #02a1b4;
-         background: #FFF url(../img/bullet_news_off.png) no-repeat 5px center;
+         padding: 3px 3px 3px 45px;
+         border: 2px solid #0081bc;
+         border-radius: 20px 3px 3px 20px;
+         color: #0081bc;
+         background: #FFF url(../img/bullet_list_02.svg) no-repeat 5px center;
          background-size: auto;
 
          &:hover {
             color: #FFF;
-            background: #02a1b4 url(../img/bullet_news_on.png) no-repeat 5px center;
+            background: #0081bc url(../img/bullet_list_01.svg) no-repeat 5px center;
             background-size: auto;
             text-decoration: none;
          }
          &.active {
             color: #FFF;
-            background: #02a1b4 url(../img/bullet_news_on.png) no-repeat 5px center;
+            background: #40beb0 url(../img/bullet_list_01.svg) no-repeat 5px center;
             background-size: auto;
             text-decoration: none;
             pointer-events: none;
@@ -124,27 +132,29 @@
          z-index: 1;
          position: relative;
          display: inline-block;
-         font-size: 30px;
+         font-size: 24px;
          line-height: 1;
-         color: #FFF;
-         padding: 10px 20px 10px 60px;
+         color: #fff;
+         padding: 8px 18px 10px 50px;
+         margin: 15px 0;
          border-radius: 50px;
-         background: #02a1b4;
+         background: #40beb0;
          background-size: auto;
-         border: 2px solid #02a1b4;
+         border: 2px solid #40beb0;
          overflow: hidden;
          transition: color 0.4s ease-in-out;        
 
          &:hover {
-            color: #02a1b4;
+            color: #40beb0;
             // background: #fff url(../img/icon_check-ov.png) no-repeat 20px center;
             text-decoration: none;
 
             &::after{
                content: '';
-               background: url(../img/icon_check-ov.png) no-repeat center center;
-               width: 30px;
-               height: 30px;
+               background: url(../img/icon_check_02.svg) no-repeat center center;
+               background-size: contain;
+               width: 24px;
+               height: 24px;
                position: absolute;
                left: 15px;
                top: 10px;
@@ -153,9 +163,10 @@
 
          &::after{
             content: '';
-            background: url(../img/icon_check.png) no-repeat center center;
-            width: 30px;
-            height: 30px;
+            background: url(../img/icon_check_01.svg) no-repeat center center;
+            background-size: contain;
+            width: 24px;
+            height: 24px;
             position: absolute;
             left: 15px;
             top: 10px;
@@ -170,7 +181,7 @@
             width: 1em;
             height: 1em;
             border-radius: 50%;
-            color: #02a1b4;
+            color: #0081bc;
             background-color: #FFF;
             transform-origin: center;
             transform: translate3d(-50%, -50%, 0) scale3d(0, 0, 0);
