--- a/css/component/_photo.scss
+++ b/css/component/_photo.scss
@@ -2,10 +2,10 @@
 
 .photo {
     position: relative;
-    padding-bottom: 15px;
+    // padding-bottom: 65px;
 
     &__caption {
-        padding-bottom: 63px;
+        // padding-bottom: 63px;
     }
 
     span {
@@ -13,11 +13,11 @@
         font-size: 16px;
         line-height: 1.2;
         margin: 5px 0 0 0;
-        color: #02a1b4;
+        color: #0081bc;
         position: absolute;
         left: 0;
         bottom: 0;
-        height: 58px;
+        // height: 58px;
     }
 
     &.float-left {
