--- a/css/layout/_footer.scss
+++ b/css/layout/_footer.scss
@@ -14,6 +14,7 @@
         display: flex;
         align-items: center;
         justify-content: left;
+        white-space: nowrap;
 
         img{
             padding-top: 15px;
