--- a/css/component/_company.scss
+++ b/css/component/_company.scss
@@ -5,19 +5,18 @@
     margin: 30px 0;
 
     &__name {
-        font-size: 44px;
+        font-size: 32px;
         font-weight: 500;
         line-height: 1;
-        color: #00628e;
-        margin-bottom: 10px;
+        color: #0081bc;
     }
 
     &__link {
         display: inline-block;
-        font-size: 30px;
-        font-weight: 500;
+        font-size: 18px;
+        font-weight: 300;
         line-height: 1;
-        color: #0081bc;
+        color: #40beb0;
         text-decoration: none;
 
         &:hover {
@@ -29,18 +28,14 @@
     }
 
     &__area {
-        color: #3c3c3c;
-        padding-left: 42px;
-        font-size: 24px;
+        color: #0081bc;
+        font-size: 20px;
         line-height: 1;
-        background: url(../img/icon_area_ts.png) no-repeat 0 center;
-        background-size: auto;
-
-        span{
-            font-size: 27px;
-            line-height: 1;
-            font-weight: 600;
-            margin-right: 12px;
+        display: flex;
+        align-items: center;
+        img {
+            width: 30px;
+            margin-right: 10px;
         }
     }
 
@@ -48,7 +43,7 @@
         position: absolute;
         right: 0;
         top: 0;
-        height: 84px;
+        height: 60px;
         img{
             height: 100%;
             width: auto;
@@ -67,25 +62,26 @@
 
     &__title {
         &-intro {
-            color: #0081bc;
-            font-size: 24px;
+            color: #fff;
+            font-size: 20px;
             font-weight: 500;
-            line-height: 30px;
-            margin-bottom: 10px;
+            line-height: 32px;
+            margin-bottom: 15px;
             padding-left: 40px;
-            background: url(../img/bullet_intro.png) no-repeat 0 center;
-            background-size: auto;
+            background: url(../img/bullet_focus_intro.svg) no-repeat 3px center/25px 25px, linear-gradient(to right, #21bcae 0%, #18609b 100%);
+            border-radius: 20px 0 0 20px;
             margin-left: -40px;
         }
 
         &-product {
-            color: #0081bc;
-            font-size: 24px;
+            color: #fff;
+            font-size: 20px;
             font-weight: 500;
-            line-height: 30px;
-            margin-bottom: 10px;
+            line-height: 32px;
+            margin-bottom: 15px;
             padding-left: 40px;
-            background: url(../img/bullet_pd.png) no-repeat 0 center;
+            background: url(../img/bullet_focus_porduct.svg) no-repeat 3px center/25px 25px, linear-gradient(to right, #21bcae 0%, #18609b 100%);
+            border-radius: 20px 0 0 20px;
             background-size: auto;
             margin-left: -40px;
         }
@@ -95,7 +91,7 @@
         margin-bottom: 50px;
 
         &-name {
-            font-size: 24px;
+            font-size: 20px;
             font-weight: 500;
             line-height: 1;
             color: #00628e;
@@ -143,28 +139,28 @@
             flex: 0 1 49%;
             margin-bottom: 15px;
             border: 2px solid #0081bc;
-            border-radius: 3px;
-            padding: 8px 8px 7px 36px;
+            border-radius: 20px 3px 3px 20px;
+            padding: 8px 8px 7px 45px;
             color: #0081bc;
-            background: #FFF url(../img/icon_exhibitor.png) no-repeat 5px center;
+            background: #FFF url(../img/bullet_list_02.svg) no-repeat 3px center;
             background-size: auto;
             display: flex;
             justify-content: space-between;
             align-items: center;
 
-            &.active{
-                text-decoration: none;
-                color: #FFF;
-                background: #0081bc url(../img/icon_exhibitor-ov.png) no-repeat 5px center;
-                background-size: auto;
-                pointer-events:none;
-            }
             &:hover {
-                text-decoration: none;
                 color: #FFF;
-                background: #0081bc url(../img/icon_exhibitor-ov.png) no-repeat 5px center;
+                background: #0081bc url(../img/bullet_list_01.svg) no-repeat 3px center;
                 background-size: auto;
-            }
+                text-decoration: none;
+             }
+             &.active {
+                color: #FFF;
+                background: #40beb0 url(../img/bullet_list_01.svg) no-repeat 3px center;
+                background-size: auto;
+                text-decoration: none;
+                pointer-events: none;
+             }
         }
     }
 }
