--- a/css/component/_photo.scss
+++ b/css/component/_photo.scss
@@ -2,10 +2,10 @@
 
 .photo {
     position: relative;
-    // padding-bottom: 65px;
+    padding-bottom: 65px;
 
     &__caption {
-        // padding-bottom: 63px;
+        padding-bottom: 63px;
     }
 
     span {
