--- a/css/layout/_base.scss
+++ b/css/layout/_base.scss
@@ -9,6 +9,7 @@ $media-sm: 576px !default;
 $media-md: 768px !default;
 $media-lg: 992px !default;
 $media-xl: 1200px !default;
+$media-xxl: 1440px !default;
 
 
 /* Color palette */
@@ -106,10 +107,10 @@ p{
   line-height: rem(24); 
 }
 .wrap{
-  min-width: $media-lg !important;
+  min-width: $media-xxl !important;
 }
 .container{
-  min-width: $media-lg !important;
+  min-width: $media-xxl !important;
 }
 img {
 
