--- a/css/layout/_footer.scss
+++ b/css/layout/_footer.scss
@@ -18,7 +18,7 @@
 
         img{
             padding-top: 15px;
-            width: 75%;
+            width: 100%;
         }
     }
 
@@ -38,6 +38,7 @@
             display: flex;
             justify-content: end;
             margin-top: 50px;
+            margin-right: 120px;
             a{
                 margin-left: 25px;
             }
