--- a/css/layout/_header.scss
+++ b/css/layout/_header.scss
@@ -12,8 +12,8 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        padding-top: 30px;
-        padding-bottom: 20px;
+        padding-top: 50px;
+        padding-bottom: 30px;
     }
 
  
@@ -23,13 +23,13 @@
         flex-direction: column;
         justify-content: space-between;
         align-items: flex-end;
-        padding-top: 40px;
-        padding-bottom: 50px;
+        padding-top: 60px;
+        padding-bottom: 60px;
     }
 
     &__no{
         color: #FFF;
-        font-size: 18px;
+        font-size: 28px;
         font-weight: bold;
         line-height: 1;
         margin-bottom: 20px;
@@ -37,35 +37,41 @@
     &__en{
         color: #FFF;
         font-size: 15px;
-        font-weight: 300;
+        font-weight: 100;
         line-height: 1;
         margin-bottom: 50px;
     }
     &__slogen{
         color: #FFF;
         width: calc( 120% + 7px );
-        font-size: 73px;
+        font-size: 93px;
         font-weight: 500;
         line-height: 1;
         letter-spacing: 2px;
         text-align: right;
-        margin: 25px -5px 100px 0;
+        margin: 25px -5px 150px 0;
         white-space: nowrap;
         &-en{
             color: #f3ad0f;
-            font-size: 36px;
+            font-size: 42px;
             font-weight: 400;
             line-height: 1;
             margin-bottom: 15px;
         }
     }
-    &__date,
+    &__date{
+        color: #0993d2;
+        font-size: 58px;
+        font-weight: 500;
+        line-height: 1;
+        margin-bottom: 10px;
+    }
     &__location{
         color: #0993d2;
-        font-size: 36px;
-        font-weight: 400;
+        font-size: 58px;
+        font-weight: 500;
         line-height: 1;
-        margin-bottom: 15px;
+        margin-bottom: 30px;
     }
     
     .nav{
@@ -74,14 +80,38 @@
         justify-content: space-between;
         align-items: center;
         color: #FFF;
-        font-size: 18px;
         font-weight: 400;
         line-height: 1;
-        &-link{
+      
+        &-link {
+            font-size: 28px;
+            font-weight: 400;
+            line-height: 1;
+            color: #fff;
+            text-decoration: none;
             padding: 0;
-            color: #FFF;
-            &:hover{
-                text-decoration: underline;
+
+            &:hover {
+                color: #fff;
+                text-decoration: none;
+            }
+            position: relative;
+
+            &::before {
+                content: "";
+                position: absolute;
+                left: 50%;
+                bottom: -4px;
+                width: 100%;
+                height: 2px;
+                background-color: #fff;
+                transform-origin: center;
+                transform: translate(-50%, 0) scaleX(0);
+                transition: transform 0.2s ease-in-out;
+            }
+
+            &:hover::before {
+                transform: translate(-50%, 0) scaleX(1);
             }
         }
 
