--- a/css/layout/_header.scss
+++ b/css/layout/_header.scss
@@ -36,10 +36,13 @@
     }
     &__en{
         color: #FFF;
-        font-size: 15px;
+        font-size: 28px;
         font-weight: 100;
         line-height: 1;
         margin-bottom: 50px;
+        a{
+            color: #fff;
+        }
     }
     &__slogen{
         color: #FFF;
