--- a/css/all.css
+++ b/css/all.css
@@ -11716,7 +11716,7 @@ img {
 .company__logo {
   position: absolute;
   right: 0;
-  top: 0;
+  bottom: 0;
   height: 60px;
 }
 
@@ -11851,7 +11851,8 @@ img {
 
 .company__other-link.active {
   color: #FFF;
-  background: #40beb0 url(../img/bullet_list_01.svg) no-repeat 5px center;
+  background: url(../img/bullet_list_01.svg) no-repeat 5px center, -webkit-gradient(linear, left top, right top, from(#21bcae), to(#18609b));
+  background: url(../img/bullet_list_01.svg) no-repeat 5px center, linear-gradient(to right, #21bcae 0%, #18609b 100%);
   background-size: auto;
   text-decoration: none;
   pointer-events: none;
