--- a/css/component/_company.scss
+++ b/css/component/_company.scss
@@ -44,7 +44,7 @@
     &__logo {
         position: absolute;
         right: 0;
-        top: 0;
+        bottom: 0;
         height: 60px;
         img{
             height: 100%;
@@ -159,7 +159,7 @@
              }
              &.active {
                 color: #FFF;
-                background: #40beb0 url(../img/bullet_list_01.svg) no-repeat 5px center;
+                background: url(../img/bullet_list_01.svg) no-repeat 5px center, linear-gradient(to right, #21bcae 0%, #18609b 100%);
                 background-size: auto;
                 text-decoration: none;
                 pointer-events: none;
