--- a/css/component/_company.scss
+++ b/css/component/_company.scss
@@ -153,7 +153,7 @@
 
             &:hover {
                 color: #FFF;
-                background: #0081bc url(../img/bullet_list_01.svg) no-repeat 5px center;
+                background: url(../img/bullet_list_01.svg) no-repeat 5px center, linear-gradient(to right, #21bcae 0%, #18609b 100%);
                 background-size: auto;
                 text-decoration: none;
              }
