--- a/css/all.css
+++ b/css/all.css
@@ -11555,14 +11555,16 @@ img {
 
 .content__link-news:hover {
   color: #FFF;
-  background: #0081bc url(../img/bullet_list_01.svg) no-repeat 5px center;
+  background: url(../img/bullet_list_01.svg) no-repeat 5px center, -webkit-gradient(linear, left top, right top, from(#21bcae), to(#18609b));
+  background: url(../img/bullet_list_01.svg) no-repeat 5px center, linear-gradient(to right, #21bcae 0%, #18609b 100%);
   background-size: auto;
   text-decoration: none;
 }
 
 .content__link-news.active {
   color: #FFF;
-  background: #40beb0 url(../img/bullet_list_01.svg) no-repeat 5px center;
+  background: url(../img/bullet_list_01.svg) no-repeat 5px center, -webkit-gradient(linear, left top, right top, from(#21bcae), to(#18609b));
+  background: url(../img/bullet_list_01.svg) no-repeat 5px center, linear-gradient(to right, #21bcae 0%, #18609b 100%);
   background-size: auto;
   text-decoration: none;
   pointer-events: none;
