--- a/css/layout/_base.scss
+++ b/css/layout/_base.scss
@@ -107,10 +107,10 @@ p{
   line-height: rem(24); 
 }
 .wrap{
-  min-width: $media-xxl !important;
+  min-width: $media-lg !important;
 }
 .container{
-  min-width: $media-xxl !important;
+  min-width: $media-lg !important;
 }
 img {
 
